--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-22.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-22.md
@@ -12,101 +12,126 @@ author: APARNA NARAYANAN
 
 
 
-**Deckers** ([DECK](https://research.investors.com/quote.aspx?symbol=DECK)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it sprints past a buy point to a new high amid robust earnings and a positive analyst initiation.  
+**Deckers** ([DECK](https://research.investors.com/quote.aspx?symbol=DECK)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it sprints past a buy point to a new high amid robust earnings and a positive analyst initiation.  
+**Deckers** （[DECK）](https://research.investors.com/quote.aspx?symbol=DECK) 是[当今的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为它在强劲的收益和积极的分析师启动中冲刺超过买入点至新高。
 
 
 
 
-Maker Of Hoka Shoes Started At Buy
-----------------------------------
+Maker Of Hoka Shoes Started At BuyHoka 鞋的制造商从购买开始
+-------------------------------------------------
 
 
-On Friday, analysts at Needham initiated coverage of Deckers Outdoor stock with a buy rating and 218 price target. That suggests more upside for DECK stock, which already sits on a nearly 72% rally so far in 2024.  
+On Friday, analysts at Needham initiated coverage of Deckers Outdoor stock with a buy rating and 218 price target. That suggests more upside for DECK stock, which already sits on a nearly 72% rally so far in 2024.  
+周五，Needham 的分析师开始对 Deckers Outdoor 股票进行报道，给予买入评级和 218 目标价。这表明 DECK 股票有更大的上涨空间，该股在 2024 年迄今已经上涨了近 72%。
 
 
-In late October, the Hoka shoe maker and Ugg shoe maker cleared an early entry after smashing earnings expectations for its second quarter.  
+In late October, the Hoka shoe maker and Ugg shoe maker cleared an early entry after smashing earnings expectations for its second quarter.  
+10 月下旬，Hoka 鞋制造商和 Ugg 鞋制造商在第二季度的收益预期超出预期后，提前进入。
 
 
-Though Deckers is a shoe manufacturer, its fortunes are tied to retail. Retail earnings and holiday outlook have been generally solid, with **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) [a standout this season](https://dash.parsely.com/investors.com/posts/EcyEIvCeRDo-walmart-earnings-growth-accelerates-amid-these-q3-highlights/). On Friday, **Gap** ([GPS](https://research.investors.com/quote.aspx?symbol=GPS)) and **Ross Stores** ([ROST](https://research.investors.com/quote.aspx?symbol=ROST)) made powerful earnings gap-ups, before trimming gains.  
+Though Deckers is a shoe manufacturer, its fortunes are tied to retail. Retail earnings and holiday outlook have been generally solid, with **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) [a standout this season](https://dash.parsely.com/investors.com/posts/EcyEIvCeRDo-walmart-earnings-growth-accelerates-amid-these-q3-highlights/). On Friday, **Gap** ([GPS](https://research.investors.com/quote.aspx?symbol=GPS)) and **Ross Stores** ([ROST](https://research.investors.com/quote.aspx?symbol=ROST)) made powerful earnings gap-ups, before trimming gains.  
+尽管 Deckers 是一家鞋类制造商，但它的命运与零售息息相关。零售收益和假日前景总体上稳健，**其中沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） [在本季表现突出](https://dash.parsely.com/investors.com/posts/EcyEIvCeRDo-walmart-earnings-growth-accelerates-amid-these-q3-highlights/)。周五，**Gap** （[GPS](https://research.investors.com/quote.aspx?symbol=GPS)） 和 **Ross Stores** （[ROST](https://research.investors.com/quote.aspx?symbol=ROST)） 在回吐涨幅之前，实现了强劲的收益差距上升。
 
 
-Deckers Stock Gaps Up
----------------------
+Deckers Stock Gaps Up Deckers Stock 跳空上涨
+----------------------------------------
 
 
-Shares of Deckers Outdoor gapped up 5.6% to 192.15 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), hitting an all-time high. Deckers stock topped a 182.26 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a cup-with-handle base, according to [MarketSurge pattern recognition](https://marketsurge.investors.com). The buy zone runs to 191.37.  
+Shares of Deckers Outdoor gapped up 5.6% to 192.15 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), hitting an all-time high. Deckers stock topped a 182.26 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a cup-with-handle base, according to [MarketSurge pattern recognition](https://marketsurge.investors.com). The buy zone runs to 191.37.  
+Deckers Outdoor 的股价[今天在股市](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/)上跳空上涨 5.6% 至 192.15，创下历史新高。根据 [MarketSurge 模式识别](https://marketsurge.investors.com)，Deckers 股票从带把手的杯子底部获得 182.26 [的买入点](https://www.investors.com/ibd-university/how-to-buy/)。买入区域运行至 191.37。
 
 
 
-The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for DECK stock is rising fast but remains below the peak of the base for now. An RS line moving to new highs along with the Hoka sneaker maker's shares would send a positive sign. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
+The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for DECK stock is rising fast but remains below the peak of the base for now. An RS line moving to new highs along with the Hoka sneaker maker's shares would send a positive sign. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
+DECK 股票的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)正在快速上升，但目前仍低于底部的峰值。RS 线与 Hoka 运动鞋制造商的股价一起创下新高将发出积极信号。上升的 RS 线意味着一只股票的表现优于标准普尔 500 指数。它是所提供图表中的蓝线。
 
 
-The current base shows symmetry and hints of institutional accumulation, according to the IBD markets team. The up/down volume ratio is highly favorable at 1.7.  
+The current base shows symmetry and hints of institutional accumulation, according to the IBD markets team. The up/down volume ratio is highly favorable at 1.7.  
+据 IBD 市场团队称，目前的基数显示出对称性和机构积累的迹象。上/下成交量比非常有利，为 1.7。
 
 
-IBD added DECK stock to [Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) as it gapped up above the 10-week line on earnings to seize an early entry. That move came as [Deckers delivered stronger-than-expected Q2 earnings](https://www.investors.com/news/hoka-shoes-deckers-earnings-skechers-skx-stock/) and helped to set up Friday's breakout. The Hoka shoe maker is also on [SwingTrader](https://swingtrader.investors.com/#/).  
+IBD added DECK stock to [Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) as it gapped up above the 10-week line on earnings to seize an early entry. That move came as [Deckers delivered stronger-than-expected Q2 earnings](https://www.investors.com/news/hoka-shoes-deckers-earnings-skechers-skx-stock/) and helped to set up Friday's breakout. The Hoka shoe maker is also on [SwingTrader](https://swingtrader.investors.com/#/).  
+IBD 将 DECK 股票添加到[排行榜](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)中，因为它的收益跳空突破 10 周线以抢占先机。此举是在 [Deckers 的第二季度收益强于预期](https://www.investors.com/news/hoka-shoes-deckers-earnings-skechers-skx-stock/)并帮助建立周五的突破之际做出的。Hoka 鞋制造商也在 [SwingTrader](https://swingtrader.investors.com/#/) 上。
 
 
-**On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)), the Swiss manufacturer of the popular On Cloud shoes, can be found on the [IBD 50 list](https://research.investors.com/stock-lists/ibd-50/) of top growth stocks.  
+**On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)), the Swiss manufacturer of the popular On Cloud shoes, can be found on the [IBD 50 list](https://research.investors.com/stock-lists/ibd-50/) of top growth stocks.  
+**On Holding** （[ONON）](https://research.investors.com/quote.aspx?symbol=ONON) 是流行的 On Cloud 鞋的瑞士制造商，可以在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 顶级成长型股票名单中找到。
 
 
-ONON stock popped 3.4% on Friday to a new high. Shares rebounded from their 50-day line this week and ran back through a buy zone.  
+ONON stock popped 3.4% on Friday to a new high. Shares rebounded from their 50-day line this week and ran back through a buy zone.  
+ONON 股价周五上涨 3.4% 至新高。本周，股价从 50 日线反弹，并回落至买入区域。
 
 
-Deckers Outdoor Earnings
-------------------------
+Deckers Outdoor Earnings Deckers Outdoor 收益
+-------------------------------------------
 
 
-The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-deckers-outdoor-deck.aspx) tool shows that DECK stock is currently the No. 2 shoe and apparel manufacturer, behind only ONON stock, in terms of its [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1), which rolls various fundamental and technical metric into one easy-to-use score.  
+The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-deckers-outdoor-deck.aspx) tool shows that DECK stock is currently the No. 2 shoe and apparel manufacturer, behind only ONON stock, in terms of its [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1), which rolls various fundamental and technical metric into one easy-to-use score.  
+[IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-deckers-outdoor-deck.aspx) 工具显示，DECK stock 目前是排名第二的鞋类和服装制造商，仅次于 ONON stock，就[其综合评级](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1)而言，该评级将各种基本和技术指标汇总为一个易于使用的分数。
 
 
-In terms of key IBD ratings, Deckers Outdoor earns a Composite Rating of 91, RS Rating of 86 and EPS Rating of 99, all out of a best-possible 99.  
+In terms of key IBD ratings, Deckers Outdoor earns a Composite Rating of 91, RS Rating of 86 and EPS Rating of 99, all out of a best-possible 99.  
+在关键的 IBD 评级方面，Deckers Outdoor 的综合评级为 91，RS 评级为 86，EPS 评级为 99，均满分 99。
 
 
-Earnings growth averaged 57% over the past three quarters, above the three-year rate of 33%. Further, Deckers boasts eight quarters of rising fund ownership.  
+Earnings growth averaged 57% over the past three quarters, above the three-year rate of 33%. Further, Deckers boasts eight quarters of rising fund ownership.  
+过去三个季度的盈利平均增长率为 57%，高于三年 33% 的增长率。此外，Deckers 拥有八个季度的基金所有权不断增长。
 
 
-On Oct. 25, Deckers posted a 39% earnings per share jump for the fiscal second quarter, far outpacing views, as revenue rose 20%. Though robust, growth on both the top and bottom lines slowed from the prior quarter.  
+On Oct. 25, Deckers posted a 39% earnings per share jump for the fiscal second quarter, far outpacing views, as revenue rose 20%. Though robust, growth on both the top and bottom lines slowed from the prior quarter.  
+10 月 25 日，Deckers 公布了第二财季每股收益增长 39%，远超预期，收入增长了 20%。尽管强劲，但营收和利润的增长均较上一季度有所放缓。
 
 
-Hoka shoe sales continued to drive growth, soaring 35%. UGG sales rose 13%.  
+Hoka shoe sales continued to drive growth, soaring 35%. UGG sales rose 13%.  
+Hoka 鞋的销售继续推动增长，飙升 35%。UGG 销售额增长了 13%。
 
 
-For the full year ending in March 2025, analysts project Deckers earnings will grow 14% per share. That would compare to a 50.5% jump last fiscal year. Analysts expect Deckers to see earnings weakness in the second half of this year.  
+For the full year ending in March 2025, analysts project Deckers earnings will grow 14% per share. That would compare to a 50.5% jump last fiscal year. Analysts expect Deckers to see earnings weakness in the second half of this year.  
+对于截至 2025 年 3 月的全年，分析师预计 Deckers 的每股收益将增长 14%。相比之下，上一财年增长了 50.5%。分析师预计 Deckers 将在今年下半年看到盈利疲软。
 
 
-But on Friday, equity research firm Needham initiated coverage of Deckers stock with a buy rating, saying that second-half guidance "looks extremely conservative."  
+But on Friday, equity research firm Needham initiated coverage of Deckers stock with a buy rating, saying that second-half guidance "looks extremely conservative."  
+但周五，股票研究公司 Needham 开始对 Deckers 股票进行买入评级，称下半年的指引“看起来非常保守”。
 
 
-Why Needham Thinks DECK Stock Is A Buy
---------------------------------------
+Why Needham Thinks DECK Stock Is A Buy为什么 Needham 认为 DECK 股票值得买入
+----------------------------------------------------------------
 
 
-Deckers is "one of the highest-quality companies in our coverage," the Needham analysts told investors, according to TheFly.com. They cited a strong, multiyear performance record, two of the strongest shoe brands in Hoka and Ugg, a stellar management team, and a fortress balance sheet. Finally, the analysts said they see the potential  for shares of DECK stock to "continue grinding higher."  
+Deckers is "one of the highest-quality companies in our coverage," the Needham analysts told investors, according to TheFly.com. They cited a strong, multiyear performance record, two of the strongest shoe brands in Hoka and Ugg, a stellar management team, and a fortress balance sheet. Finally, the analysts said they see the potential  for shares of DECK stock to "continue grinding higher."  
+据 TheFly.com 称，Deckers 是“我们覆盖范围内质量最高的公司之一”，Needham 分析师告诉投资者。他们列举了强劲的多年业绩记录、Hoka 和 Ugg 这两个最强大的鞋类品牌、出色的管理团队以及堡垒资产负债表。最后，分析师表示，他们认为 DECK 股票的股价有可能“继续走高”。
 
 
-Meanwhile, investors continue to watch the state of consumer financial health amid inflation. Retailers are bracing for President-elect Donald Trump's tax and tariffs policies, which could boost consumer spending and fuel inflationary pressures.  
+Meanwhile, investors continue to watch the state of consumer financial health amid inflation. Retailers are bracing for President-elect Donald Trump's tax and tariffs policies, which could boost consumer spending and fuel inflationary pressures.  
+与此同时，投资者继续关注通货膨胀中消费者的财务状况。零售商正在为当选总统唐纳德·特朗普的税收和关税政策做准备，这可能会提振消费者支出并加剧通胀压力。
 
 
-*Please follow Aparna Narayanan on X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) for more coverage.* 
+*Please follow Aparna Narayanan on X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) for more coverage.  
+请在 X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) 上关注 Aparna Narayanan 以获得更多报道。*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/) 
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
+最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/) 
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
+寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A) 
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
+加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Stay Cool In Hot Market; Forget Nvidia, Meet New AI Chip Leader](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-forget-nvidia-ai-chip-leader-astera-labs/) 
+[Stay Cool In Hot Market; Forget Nvidia, Meet New AI Chip Leader  
+在热门市场保持凉爽;忘记 Nvidia，认识新的 AI 芯片领导者](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-forget-nvidia-ai-chip-leader-astera-labs/)
 
 
 
