--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-25.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-25.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  TJX, IBD Stock Of The Day, Actionable After Earnings, Target Hikes
+  TJX, IBD Stock Of The Day, Actionable After Earnings, Target Hikes	TJX，今日 IBD 股票，财报后可操作，目标加息
 image: /assets/img/stock-of-the-day/2024-11-25.jpg
 date: 2024-11-25 13:41 -0800
 author: HARRISON MILLER
@@ -12,90 +12,114 @@ author: HARRISON MILLER
 
 
 
-TJX is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Monday as shares climbed in a buy zone on the back of its earnings last week. Meanwhile, other retailers continue to report results as the holiday shopping season gets underway.  
+TJX is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Monday as shares climbed in a buy zone on the back of its earnings last week. Meanwhile, other retailers continue to report results as the holiday shopping season gets underway.  
+TJX 是周一的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为上周财报公布后，股价在买入区域攀升。与此同时，随着假日购物季的到来，其他零售商继续报告业绩。
 
 
 
 
-**TJX** ([TJX](https://research.investors.com/quote.aspx?symbol=TJX)) on Nov. 20 reported about an 11% increase in Q3 2025 earnings to $1.14 per share, which beat FactSet estimates for $1.09 per share. Net sales increased 6% to $14.06 billion, also topping expectations for $13.95 billion.  
+**TJX** ([TJX](https://research.investors.com/quote.aspx?symbol=TJX)) on Nov. 20 reported about an 11% increase in Q3 2025 earnings to $1.14 per share, which beat FactSet estimates for $1.09 per share. Net sales increased 6% to $14.06 billion, also topping expectations for $13.95 billion.  
+**TJX** （[TJX](https://research.investors.com/quote.aspx?symbol=TJX)） 于 11 月 20 日报告称，2025 年第三季度的收益增长约 11% 至每股 1.14 美元，高于 FactSet 估计的每股 1.09 美元。净销售额增长 6% 至 140.6 亿美元，也高于预期的 139.5 亿美元。
 
 
-Consolidated comparable sales for the quarter rose 3% to match analyst views. Same store sales for TJX International increased 7%.  
+Consolidated comparable sales for the quarter rose 3% to match analyst views. Same store sales for TJX International increased 7%.  
+本季度综合可比销售额增长 3%，与分析师的观点一致。TJX International 的同店销售额增长了 7%。
 
 
-Net sales for Marmaxx, which includes TJ Maxx and Marshalls, rose 4% to $8.44 billion. HomeGoods sales rose 7% while TJX Canada sales rose 5%. International sales for TJX, including Europe and Australia, popped 16% to nearly $1.9 billion.  
+Net sales for Marmaxx, which includes TJ Maxx and Marshalls, rose 4% to $8.44 billion. HomeGoods sales rose 7% while TJX Canada sales rose 5%. International sales for TJX, including Europe and Australia, popped 16% to nearly $1.9 billion.  
+Marmaxx（包括 TJ Maxx 和 Marshalls）的净销售额增长 4% 至 84.4 亿美元。HomeGoods 销售额增长 7%，而 TJX Canada 销售额增长 5%。TJX 的国际销售额（包括欧洲和澳大利亚）增长了 16%，达到近 19 亿美元。
 
 
-"Across the company, customer transactions drove our comp sales increases, which tells us that our values and treasure-hunt shopping experience are appealing to a wide range of customers," CEO Ernie Herrman said in the earnings release.  
+"Across the company, customer transactions drove our comp sales increases, which tells us that our values and treasure-hunt shopping experience are appealing to a wide range of customers," CEO Ernie Herrman said in the earnings release.  
+“在整个公司，客户交易推动了我们的 comp 销售额增长，这告诉我们，我们的价值观和寻宝购物体验吸引了广泛的客户，”首席执行官 Ernie Herrman 在财报中表示。
 
 
-TJX lifted its full-year earnings outlook to range from $4.15 to $4.17 per share, up from its prior guidance for $4.09 to $4.13 per share. However, the updated guidance still fell short of FactSet estimates for $4.19 per share.  
+TJX lifted its full-year earnings outlook to range from $4.15 to $4.17 per share, up from its prior guidance for $4.09 to $4.13 per share. However, the updated guidance still fell short of FactSet estimates for $4.19 per share.  
+TJX 将其全年盈利预期上调至每股 4.15 美元至 4.17 美元，高于此前的每股 4.09 美元至 4.13 美元。然而，更新后的指引仍低于 FactSet 估计的每股 4.19 美元。
 
 
-TJX maintained its comparable sales forecast for 3% growth.  
+TJX maintained its comparable sales forecast for 3% growth.  
+TJX 维持其 3% 增长的可比销售额预测。
 
 
-The company expects its Q4 earnings to range from $1.12 to $1.14 per share, also below analyst expectations for $1.16 per share.  
+The company expects its Q4 earnings to range from $1.12 to $1.14 per share, also below analyst expectations for $1.16 per share.  
+该公司预计其第四季度收益将在每股 1.12 美元至 1.14 美元之间，也低于分析师预期的每股 1.16 美元。
 
 
-Despite the guidance miss, a number of firms modestly raised price targets on TJX stock after results.  
+Despite the guidance miss, a number of firms modestly raised price targets on TJX stock after results.  
+尽管未达到指引，但一些公司在财报公布后小幅上调了 TJX 股票的目标价。
 
 
-Baird on Thursday raised its price target by $5 to 133 and kept an outperform rating on shares, noting that TJX continues to demonstrate strong merchant execution and the appeal of value. Evercore ISI said that TJX's Q4 is off to a "strong" start, which should override any concerns about Q3 results. The firm raised its price target on TJX by $4 to 142 and maintained its outperform rating. Evercore also noted that it doesn't expect other retailers reporting before Black Friday to reflect that same strength.  
+Baird on Thursday raised its price target by $5 to 133 and kept an outperform rating on shares, noting that TJX continues to demonstrate strong merchant execution and the appeal of value. Evercore ISI said that TJX's Q4 is off to a "strong" start, which should override any concerns about Q3 results. The firm raised its price target on TJX by $4 to 142 and maintained its outperform rating. Evercore also noted that it doesn't expect other retailers reporting before Black Friday to reflect that same strength.  
+Baird 周四将其目标价上调 5 美元至 133 美元，并保持对股票的跑赢大盘评级，并指出 TJX 继续展示强大的商家执行力和价值吸引力。Evercore ISI 表示，TJX 的第四季度开局“强劲”，这应该会抵消对第三季度业绩的任何担忧。该公司将 TJX 的目标价上调 4 美元至 142 美元，并维持其跑赢大盘评级。Evercore 还指出，它预计其他零售商在黑色星期五之前公布的财报不会反映出同样的实力。
 
 
-TD Cowen also raised its price target for TJX stock on Monday by $2 to 132 and kept a buy rating on the shares.  
+TD Cowen also raised its price target for TJX stock on Monday by $2 to 132 and kept a buy rating on the shares.  
+TD Cowen 周一还将 TJX 股票的目标价上调 2 美元至 132 美元，并维持对该股的买入评级。
 
 
-Retail Earnings
----------------
+Retail Earnings 零售收益
+--------------------
 
 
-Among other retailers, **Bath & Body Works** ([BBWI](https://research.investors.com/quote.aspx?symbol=BBWI)) popped more than 14% Monday on its earnings beat. **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) retreated nearly 4% after delaying its quarterly report. The legacy department giant announced it is conducting an internal investigation after discovering an employee "intentionally" hid $132 million to $154 million in delivery expenses dating back to Q4 2021.  
+Among other retailers, **Bath & Body Works** ([BBWI](https://research.investors.com/quote.aspx?symbol=BBWI)) popped more than 14% Monday on its earnings beat. **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) retreated nearly 4% after delaying its quarterly report. The legacy department giant announced it is conducting an internal investigation after discovering an employee "intentionally" hid $132 million to $154 million in delivery expenses dating back to Q4 2021.  
+在其他零售商中，**Bath & Body Works** （[BBWI](https://research.investors.com/quote.aspx?symbol=BBWI)） 周一的收益增长超过14%。**梅西百货** （[M](https://research.investors.com/quote.aspx?symbol=M)） 在推迟季度报告后下跌近 4%。这家传统部门巨头宣布，在发现一名员工“故意”隐瞒可追溯到 2021 年第四季度的 1.32 亿至 1.54 亿美元的交付费用后，它正在进行内部调查。
 
 
-**Burlington** ([BURL](https://research.investors.com/quote.aspx?symbol=BURL)) and **Kohl's** ([KSS](https://research.investors.com/quote.aspx?symbol=KSS)) both report on Tuesday.  
+**Burlington** ([BURL](https://research.investors.com/quote.aspx?symbol=BURL)) and **Kohl's** ([KSS](https://research.investors.com/quote.aspx?symbol=KSS)) both report on Tuesday.  
+**伯灵顿** （[BURL](https://research.investors.com/quote.aspx?symbol=BURL)） 和 **Kohl's** （[KSS](https://research.investors.com/quote.aspx?symbol=KSS)） 均在周二公布财报。
 
 
-FactSet expects Burlington to report a 58% increase in earnings to $1.55 per share on about 12% revenue growth to $2.55 billion. Burling stock is at the top of a buy range following a breakout on Friday.  
+FactSet expects Burlington to report a 58% increase in earnings to $1.55 per share on about 12% revenue growth to $2.55 billion. Burling stock is at the top of a buy range following a breakout on Friday.  
+FactSet 预计伯灵顿的收益将增长 58% 至每股 1.55 美元，收入增长约 12% 至 25.5 亿美元。Burling 股票在周五突破后处于买入区间的顶部。
 
 
-Analysts see Kohl's earnings nearly halving to 28 cents per share while revenue slides more than 5% to $3.64 billion.  
+Analysts see Kohl's earnings nearly halving to 28 cents per share while revenue slides more than 5% to $3.64 billion.  
+分析师预计 Kohl's 的收益几乎减半至每股 28 美分，而收入下滑超过 5% 至 36.4 亿美元。
 
 
-TJX Stock
----------
+TJX Stock TJX 股票
+----------------
 
 
 
-TJX stock swung 2.7% higher Monday, climbing further in a buy zone for an 11-week [flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/).  
+TJX stock swung 2.7% higher Monday, climbing further in a buy zone for an 11-week [flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/).  
+TJX 股价周一上涨 2.7%，在 11 周[持平的底部](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/)进一步攀升至买入区域。
 
 
-Shares closed just above the 121.13 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) on Friday after testing the entry in mid-November.  
+Shares closed just above the 121.13 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) on Friday after testing the entry in mid-November.  
+在 11 月中旬测试入场点后，股价周五收于略高于 121.13 [买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)。
 
 
-The current [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/), which stretches 5% beyond the buy point, extends to 127.19.  
+The current [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/), which stretches 5% beyond the buy point, extends to 127.19.  
+目前的[买入区域](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/)超出买入点 5%，延伸至 127.19。
 
 
-TJX stock rallied more than 32% so far this year and is trading at record highs.  
+TJX stock rallied more than 32% so far this year and is trading at record highs.  
+TJX 股票今年迄今上涨了 32% 以上，交易价格创下历史新高。
 
 
-*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)* 
+*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)  
+您可以在 X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison) 上关注 Harrison Miller 以获取更多股票新闻和更新*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/) 
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
+最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/) 
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
+寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A) 
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
+加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
 
