--- a/_columns/Swing_Trading/zh-cn/2024-11-08.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-08.md
@@ -11,10 +11,12 @@ author: JUSTIN NIELSEN
 
 
 
-Sticking with a position can be difficult as stocks climb a wall of worry. With the election, Fed meetings and an earnings season with 15%+ moves going either way, there's been reason for caution with individual stocks. That's why sometimes we'll lean heavier on a market ETF like the SPDR S&P 500 or related ETFs.  
+Sticking with a position can be difficult as stocks climb a wall of worry. With the election, Fed meetings and an earnings season with 15%+ moves going either way, there's been reason for caution with individual stocks. That's why sometimes we'll lean heavier on a market ETF like the SPDR S&P 500 or related ETFs.  
+随着股票攀升担忧之墙，坚持一个头寸可能很困难。随着大选、美联储会议和财报季的 15%+ 波动，有理由对个股持谨慎态度。这就是为什么有时我们会更倾向于像 SPDR S&P 500 这样的市场 ETF 或相关 ETF。
 
 
-Specifically, we'll get leveraged counterparts like the **2X ProShares Ultra S&P 500** ([SSO](https://research.investors.com/quote.aspx?symbol=SSO)). That gives us profit potential closer to that of an individual stock without the news risk that can slam a company's shares.  
+Specifically, we'll get leveraged counterparts like the **2X ProShares Ultra S&P 500** ([SSO](https://research.investors.com/quote.aspx?symbol=SSO)). That gives us profit potential closer to that of an individual stock without the news risk that can slam a company's shares.  
+具体来说，我们将获得杠杆交易，例如 **2X ProShares Ultra S&P 500** （[SSO](https://research.investors.com/quote.aspx?symbol=SSO)）。这使我们的利润潜力更接近个股，而没有可能重创公司股票的新闻风险。
 
 
 
@@ -26,7 +28,8 @@ Strong September for S&P 500
 Our most recent closed trade for the S&P 500 started with a [big outside day and recovery](https://www.investors.com/market-trend/the-big-picture/stocks-market-dow-jones-nasdaq-sp500-inflation/) after a Consumer Price Index (CPI) report shook markets **(1)**. We started increasing exposure with some individual stocks and then went with the 2X leveraged SSO trade the next day **(2)**.  
 
 
-Even though we started with a full position, we quickly added to make a double position. First we added after we made some progress **(3)**. Then we added on a strong move after the Fed cut rates by 50 basis points **(4)**.  
+Even though we started with a full position, we quickly added to make a double position. First we added after we made some progress **(3)**. Then we added on a strong move after the Fed cut rates by 50 basis points **(4)**.  
+尽管我们从一个完整的位置开始，但我们很快就增加了一个双倍的位置。首先，我们在取得一些进展后添加了 **（3）。**然后，在美联储降息 50 个基点后，我们增加了一个强劲的举措 **（4）。**
 
 
 
@@ -34,7 +37,8 @@ Even though we started with a full position, we quickly added to make a double p
 ---
 
 
-[**After Strong postelection Rally, Is There Reason To Approach With Caution?**](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
+[**After Strong postelection Rally, Is There Reason To Approach With Caution?  
+在选后强劲反弹之后，是否有理由谨慎行事？**](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
 
 
 
@@ -42,53 +46,67 @@ Even though we started with a full position, we quickly added to make a double p
 ---
 
 
-When the S&P 500 broke its 10-day moving average line for the first time since our entry **(5)**, we peeled back our last purchase. Taking a portion off but keeping the bulk of the position kept our average cost low and our cushion.  
+When the S&P 500 broke its 10-day moving average line for the first time since our entry **(5)**, we peeled back our last purchase. Taking a portion off but keeping the bulk of the position kept our average cost low and our cushion.  
+当标准普尔 500 指数自我们进入 **（5）** 以来首次突破其 10 天移动平均线时，我们取消了最后一次购买。减少一部分但保留大部分头寸保持了我们的平均成本较低和缓冲。
 
 
-After the S&P 500 recovered with support at its 21-day moving average line, we added that position right back **(6)**.  
+After the S&P 500 recovered with support at its 21-day moving average line, we added that position right back **(6)**.  
+在标准普尔 500 指数在其 21 天移动平均线获得支撑后，我们又增加了该位置 **（6）。**
 
 
-An Exit That Didn't Last Long
------------------------------
+An Exit That Didn't Last Long一个没有持续多久的退出
+----------------------------------------
 
 
-As stocks came in sharply just ahead of the election, we scaled way back on our exposure. The S&P 500 sliced through its 21-day line **(7)** and we exited the bulk of the position that day with the remainder leaving the next.  
+As stocks came in sharply just ahead of the election, we scaled way back on our exposure. The S&P 500 sliced through its 21-day line **(7)** and we exited the bulk of the position that day with the remainder leaving the next.  
+由于股市在大选前大幅上涨，我们大幅缩减了风险敞口。标准普尔 500 指数突破了其 21 日线 **（7），**我们当天退出了大部分头寸，其余头寸在第二天离开。
 
 
-We were facing a number of events: the election, Fed meeting and a continuous onslaught of earnings. Our plan was to wait for the dust to settle following those events. With the S&P 500 trading below the [21-day line](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) it seemed the safer course of action.  
+We were facing a number of events: the election, Fed meeting and a continuous onslaught of earnings. Our plan was to wait for the dust to settle following those events. With the S&P 500 trading below the [21-day line](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) it seemed the safer course of action.  
+我们面临着许多事件：选举、美联储会议和持续的收益冲击。我们的计划是等待这些事件之后尘埃落定。随着标准普尔 500 指数的交易价格低于 [21 天线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)，这似乎是更安全的行动方案。
 
 
-But when the Nasdaq composite and S&P 500 both retook their 21-day lines **(8)**, we increased our exposure quickly. Again, we used SSO as our S&P 500 exposure with adds to the Russell 2000 and Nasdaq 100 through leveraged ETFs as well. We left ourselves with plenty of cash to cushion a blow if there was a negative reaction to news events. At the same time, we had enough exposure to allow us some participation and a foothold should the market react positively.  
+But when the Nasdaq composite and S&P 500 both retook their 21-day lines **(8)**, we increased our exposure quickly. Again, we used SSO as our S&P 500 exposure with adds to the Russell 2000 and Nasdaq 100 through leveraged ETFs as well. We left ourselves with plenty of cash to cushion a blow if there was a negative reaction to news events. At the same time, we had enough exposure to allow us some participation and a foothold should the market react positively.  
+但是，当纳斯达克综合指数和标准普尔 500 指数都收复了 21 日线 **（8）** 时，我们迅速增加了敞口。同样，我们使用 SSO 作为标准普尔 500 指数的风险敞口，并通过杠杆 ETF 增持罗素 2000 和纳斯达克 100 指数。我们给自己留下了大量现金，以缓冲对新闻事件的负面反应时的打击。与此同时，我们有足够的敞口，如果市场反应积极，我们可以有一些参与和立足点。
 
 
-That foothold served us well. As the election got a quick resolution and the market reacted positively **(9)**, we were able to ramp up exposure to a point where we beat the S&P 500 performance on Wednesday and Thursday.  
+That foothold served us well. As the election got a quick resolution and the market reacted positively **(9)**, we were able to ramp up exposure to a point where we beat the S&P 500 performance on Wednesday and Thursday.  
+这个立足点对我们很有帮助。随着选举的快速解决和市场积极反应 **（9），**我们能够增加敞口，直到周三和周四的表现超过标准普尔 500 指数的表现。
 
 
-Though it was not our plan to ramp up before the election was decided, sometimes the market makes decisions for you. The positive action on election day put us in motion and the follow-through action on the S&P 500 kept us in motion.  
+Though it was not our plan to ramp up before the election was decided, sometimes the market makes decisions for you. The positive action on election day put us in motion and the follow-through action on the S&P 500 kept us in motion.  
+虽然我们没有计划在选举决定之前加大规模，但有时市场会为您做出决定。选举日的积极行动让我们行动起来，而对标准普尔 500 指数的后续行动让我们继续前进。
 
 
-It's a place where technical analysis can hold a big benefit over going with your gut.  
+It's a place where technical analysis can hold a big benefit over going with your gut.  
+在这里，技术分析比随心所欲有很大的好处。
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
 
 
-[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment) 
+[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
+Mark Minervini 对动荡的市场提出了这个违反直觉的建议](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
 
 
-[How to Smooth Your Equity Curve And Reduce Drawdowns](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
+[How to Smooth Your Equity Curve And Reduce Drawdowns  
+如何平滑您的净值曲线并减少回撤](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations) 
+[How Weak Breadth Can Give You An Early Warning For Market Tops  
+弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
+[Follow Premarket And After-The-Open Action With IBD Experts  
+跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
 
 
 
